fix: removed scrollbar when objects offscreen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,4 +3,5 @@ body {
   background-image:
     linear-gradient(to right, grey 1px, transparent 1px),
     linear-gradient(to bottom, grey 1px, transparent 1px);
+  overflow: hidden;
 }
